--- a/composer.json
+++ b/composer.json
@@ -3,14 +3,15 @@
   "description": "Small command-line world clock to print certain date/time in multiple timezones, built on top of PHP.",
   "license": "MIT",
   "require": {
-    "symfony/console": "~2.5"
+    "symfony/console": "^6.2"
   },
   "require-dev": {
-    "phpunit/phpunit": "~4.0"
+    "roave/security-advisories": "dev-latest",
+    "phpunit/phpunit": "^10.0"
   },
   "autoload": {
     "psr-4": {
-      "TzDate\\": "src"
+      "TzDate\\": ["src", "tests"]
     }
   }
 }
