--- a/composer.json
+++ b/composer.json
@@ -3,10 +3,11 @@
   "description": "Small command-line world clock to print certain date/time in multiple timezones, built on top of PHP.",
   "license": "MIT",
   "require": {
-    "symfony/console": "~2.5"
+    "symfony/console": "^6.0.1"
   },
   "require-dev": {
-    "phpunit/phpunit": "~4.0"
+    "roave/security-advisories": "dev-latest",
+    "phpunit/phpunit": "^9.5.10"
   },
   "autoload": {
     "psr-4": {
