--- a/res/config.json.dist
+++ b/res/config.json.dist
@@ -1,25 +1,51 @@
 {
   "default_timezones": [
-    "UTC",
-    "London",
-    "Paris",
-    "New York",
-    "San Francisco",
     "Honolulu",
-    "Beijing",
+    "San Francisco",
+    "New York",
+    "London",
+    "UTC",
+    "Paris",
+    "Shanghai",
     "Tokyo"
   ],
   "cities": {
+    "Abu Dhabi": "Asia/Dubai",
+    "Bangalore": "Asia/Kolkata",
+    "Barcelona": "Europe/Madrid",
     "Beijing": "Asia/Shanghai",
+    "Bengaluru": "Asia/Kolkata",
+    "Boston": "America/New_York",
     "Calcutta": "Asia/Kolkata",
+    "Cape Town": "Africa/Johannesburg",
+    "Delhi": "Asia/Kolkata",
+    "Frankfurt": "Europe/Berlin",
+    "Guangzhou": "Asia/Shanghai",
+    "Hanoi": "Asia/Ho_Chi_Minh",
+    "Las Vegas": "America/Los_Angeles",
+    "Makkah": "Asia/Riyadh",
+    "Mecca": "Asia/Riyadh",
+    "Miami": "America/New_York",
+    "Milano": "Europe/Rome",
+    "Mumbai": "Asia/Kolkata",
+    "New Delhi": "Asia/Kolkata",
+    "Osaka": "Asia/Tokyo",
+    "Rio de Janeiro": "America/Sao_Paulo",
     "Saigon": "Asia/Ho_Chi_Minh",
-    "San Francisco": "America/Los_Angeles"
+    "Saint Petersburg": "Europe/Moscow",
+    "San Francisco": "America/Los_Angeles",
+    "Shenzhen": "Asia/Shanghai",
+    "Tel Aviv": "Asia/Jerusalem",
+    "Washington DC": "America/New_York"
   },
   "aliases": {
+    "CDMX": "Mexico City",
+    "DC": "Washington DC",
     "HK": "Hong Kong",
     "KL": "Kuala Lumpur",
     "LA": "Los Angeles",
     "NY": "New York",
+    "NYC": "New York",
     "SF": "San Francisco"
   },
   "list_format": "<info>%1$-15s</info> %2$-7s %3$-9s %4$s"
