--- a/composer.json
+++ b/composer.json
@@ -7,11 +7,16 @@
   },
   "require-dev": {
     "roave/security-advisories": "dev-latest",
-    "phpunit/phpunit": "^10.0"
+    "phpunit/phpunit": "^10.5"
   },
   "autoload": {
     "psr-4": {
       "TzDate\\": ["src", "tests"]
+    }
+  },
+  "config": {
+    "platform": {
+      "php": "8.4"
     }
   }
 }
